--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "gh-pages": "^4.0.0",
+    "gh-pages": "6.1.1",
     "prettier": "^2.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
